--- a/booking.html
+++ b/booking.html
@@ -71,13 +71,14 @@
             <button type="button" class="btn-close p-2" data-bs-dismiss="alert" aria-label="Close"></button>
         </div> -->
 
-        <div class="alertbox ">
+        <div class="alertbox">
             <div class="row vertivalcenter">
-                <div class="col-9">
+                <div class="col-10 ">
                     Save Data Found<strong id="restorbtn"><a> Click Here</a>  </strong> to Restore
                 </div>
-                <div class="col-3">
-                    <button type="button" class="alartbutton">ddd</button>
+                <div class="col-2 ">
+                    <!-- <button type="button" class="alartbutton">ddd</button> -->
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" id="alertboxclose" aria-label="Close"></button>
 
                 </div>
             </div>
