--- a/index.html
+++ b/index.html
@@ -36,20 +36,22 @@
             Let's Go
           </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a class="dropdown-item" href="trainmap.html">Train Map</a></li>
-                        <li><a class="dropdown-item" href="trainlist.html">Train List</a></li>
-                        <li><a class="dropdown-item" href="#">Train Search</a></li>
-                        <li><a class="dropdown-item" href="costcal.html">Price Calculator</a></li>
-                        <li><a class="dropdown-item" href="booking.html">Train Seat Booking</a></li>
+                        <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
+                        <li id="trainlist"><a class="dropdown-item">Train List</a></li>
+                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
+                        <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
+                        <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="gallery.html" class="nav-link text-white">Gallery</a></li>
-                <li class="nav-item"><a href="#" class="nav-link text-white">Contact</a></li>
-                <li class="nav-item"><a href="history.html" class="nav-link text-white">About</a></li>
-                <li class="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>
+                <li class="nav-item" id="gallery"><a class="nav-link text-white">Gallery</a></li>
+                <li class="nav-item" id="contact"><a class="nav-link text-white">Contact</a></li>
+                <li class="nav-item" id="about"><a class="nav-link text-white">About</a></li>
+                <li class="nav-item" id="login"><a class="nav-link text-white">Login</a></li>
             </ul>
         </header>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/customStript/navbar.js"></script>
 
     <div class="header-slider">
         <!-- <img src="assets/image/train.jpg" class="img-fluid"> -->
@@ -138,6 +140,9 @@
 
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="script/customStript/slidshow.js"></script>
+
+
+
 
 </body>
 
