--- a/booking.html
+++ b/booking.html
@@ -59,7 +59,7 @@
 
     </div>
     <!-- <div class="container" id="container-form"> -->
-    <div class="form-container">
+    <div class="form-container" id="bookingform">
 
         <h2>Seat Booking Form</h2>
 
@@ -71,7 +71,7 @@
             <button type="button" class="btn-close p-2" data-bs-dismiss="alert" aria-label="Close"></button>
         </div> -->
 
-        <div class="alertbox">
+        <div class="alertbox" id="savedataalert">
             <div class="row vertivalcenter">
                 <div class="col-10 ">
                     Save Data Found<strong id="restorbtn"><a> Click Here</a>  </strong> to Restore
@@ -184,9 +184,34 @@
 
         <!-- <div class="row w-100 mt-1"> -->
     </div>
+    <div class="form-container " id="formsuccess">
+        <div class="row">
+            <div class="col">
+
+                <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+                    <symbol id="check-circle-fill" fill="currentColor" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                    </symbol>
+                    
+                </svg>
+                <div class="alert alert-success d-flex align-items-center w-100  " role="alert">
+                    <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+                    <div>
+                        Seat Booking Successful
+                    </div>
+                </div>
+            </div>
+            <br>
+
+        </div>
+        <div class="row text-center">
+            <div class="col">
 
 
-    <!-- </div> -->
+                <button type="button" class="btn btn-success w-25" onclick="window.location.href='index.html'">Go Back</button>
+            </div>
+        </div>
+    </div>
 
     </div>
     <div id="h-10"></div>
