--- a/trainmap.html
+++ b/trainmap.html
@@ -31,6 +31,7 @@
 
 <body class="body">
 
+
     <div class="container-fluid bg-dark" id="header1">
         <header class="d-flex flex-wrap justify-content-center py-3">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -39,23 +40,23 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Let's Go
       </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
-                        <li><a id="" class="dropdown-item">Train List</a></li>
-                        <li><a id="" class="dropdown-item">Train Search</a></li>
-                        <li><a id="" class="dropdown-item">Price Calculator</a></li>
-                        <li><a id="" class="dropdown-item">Train Seat Booking</a></li>
+                        <li id="trainlist"><a class="dropdown-item">Train List</a></li>
+                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
+                        <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
+                        <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a id="gallery" class="nav-link text-white">Gallery</a></li>
-                <li class="nav-item"><a id="" class="nav-link text-white">Contact</a></li>
-                <li class="nav-item"><a id="" class="nav-link text-white">About</a></li>
-                <li class="nav-item"><a id="" class="nav-link text-white">Login</a></li>
+                <li class="nav-item" id="gallery"><a class="nav-link text-white">Gallery</a></li>
+                <li class="nav-item" id="contact"><a class="nav-link text-white">Contact</a></li>
+                <li class="nav-item" id="about"><a class="nav-link text-white">About</a></li>
+                <li class="nav-item" id="login"><a class="nav-link text-white">Login</a></li>
             </ul>
         </header>
     </div>
