--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,7 @@
 <body class="body">
 
 
+
     <div class="container-fluid bg-dark" id="header1">
         <header class="d-flex flex-wrap justify-content-center py-3">
             <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
@@ -35,20 +36,22 @@
             Let's Go
           </a>
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                        <li><a id="trainmap" class="dropdown-item" href="#">Train Map</a></li>
-                        <li><a id="" class="dropdown-item" href="#">Train List</a></li>
-                        <li><a id="" class="dropdown-item" href="#">Train Search</a></li>
-                        <li><a id="" class="dropdown-item" href="#">Price Calculator</a></li>
-                        <li><a id="" class="dropdown-item" href="#">Train Seat Booking</a></li>
+                        <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
+                        <li id="trainlist"><a class="dropdown-item">Train List</a></li>
+                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
+                        <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
+                        <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="#" id="" class="nav-link text-primary">Gallery</a></li>
-                <li class="nav-item"><a href="#" id="" class="nav-link text-white">Contact</a></li>
-                <li class="nav-item"><a href="#" id="" class="nav-link text-white">About</a></li>
-                <li class="nav-item"><a href="#" id="" class="nav-link text-white">Login</a></li>
+                <li class="nav-item" id="gallery"><a class="nav-link text-white">Gallery</a></li>
+                <li class="nav-item" id="contact"><a class="nav-link text-white">Contact</a></li>
+                <li class="nav-item" id="about"><a class="nav-link text-white">About</a></li>
+                <li class="nav-item" id="login"><a class="nav-link text-white">Login</a></li>
             </ul>
         </header>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/customStript/navbar.js"></script>
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
         <div class="centered">Gallery</div>
