--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Let's Go
