--- a/model.html
+++ b/model.html
@@ -3,62 +3,67 @@
 
 <head>
 
-  <!-- Meta -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- stylesheet -->
-  <link rel="stylesheet" href="Styles\bootstrap\bootstrap.css"> <!--  bootstrap -->
-  <link rel="stylesheet" href="Styles\customcss\style.css"> <!--  custom css -->
-  <link rel="stylesheet" href="Styles\customcss\stylebox.css"> <!--  custom css -->
-  <title>Document</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="Styles\bootstrap\bootstrap.css">
+    <!--  bootstrap -->
+    <link rel="stylesheet" href="Styles\customcss\style.css">
+    <!--  custom css -->
+    <link rel="stylesheet" href="Styles\customcss\stylebox.css">
+    <!--  custom css -->
+    <title>Document</title>
 </head>
 
 <body class="body">
 
-  <div class="container-fluid bg-dark" id="header1">
-    <header class="d-flex flex-wrap justify-content-center py-3">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"></svg>
-        <span class="fs-4 white">Ceylon Train</span>
+
+    <div class="container-fluid bg-dark" id="header1">
+        <header class="d-flex flex-wrap justify-content-center py-3">
+            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                <svg class="bi me-2" width="40" height="32"></svg>
+                <span class="fs-4 white">Ceylon Train</span>
+            </a>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="index.html" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Let's Go
       </a>
+                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
+                        <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
+                        <li id="trainlist"><a class="dropdown-item">Train List</a></li>
+                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
+                        <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
+                        <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item" id="gallery"><a class="nav-link text-white">Gallery</a></li>
+                <li class="nav-item" id="contact"><a class="nav-link text-white">Contact</a></li>
+                <li class="nav-item" id="about"><a class="nav-link text-white">About</a></li>
+                <li class="nav-item" id="login"><a class="nav-link text-white">Login</a></li>
+            </ul>
+        </header>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/customStript/navbar.js"></script>
 
-      <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#" class="nav-link text-white bg-primary " aria-current="page">Home</a></li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDarkDropdownMenuLink" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Let's Go
-          </a>
-          <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-            <li><a class="dropdown-item" href="trainmap.html">Train Map</a></li>
-            <li><a class="dropdown-item" href="trainlist.html">Train List</a></li>
-            <li><a class="dropdown-item" href="#">Train Search</a></li>
-            <li><a class="dropdown-item" href="#">Price Calculator</a></li>
-            <li><a class="dropdown-item" href="#">Train Seat Booking</a></li>
-          </ul>
-        </li>
-        <li class="nav-item"><a href="gallery.html" class="nav-link text-white">Gallery</a></li>
-        <li class="nav-item"><a href="#" class="nav-link text-white">Contact</a></li>
-        <li class="nav-item"><a href="history.html" class="nav-link text-white">About</a></li>
-        <li class="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>
-      </ul>
-    </header>
-  </div>
+    <div class="header-img" id="navbar">
+        <img src="assets/image/train.jpg" class="img-fluid">
+        <div class="centered">Page Name</div>
+    </div>
 
-  <div class="header-img" id="navbar">
-    <img src="assets/image/train.jpg" class="img-fluid">
-    <div class="centered">Page Name</div>
-  </div>
+    <div class="stylebox" id="h-10">
 
-  <div class="stylebox" id="h-10">
+    </div>
+    <div class="container" id="container-body">
+    </div>
 
-  </div>
-  <div class="container" id="container-body">
-  </div>
-
-  <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
 
 </body>
 
