--- a/trainmap.html
+++ b/trainmap.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="Styles\bootstrap\bootstrap.css">
+    <link rel="stylesheet" href="styles\bootstrap\bootstrap.css">
     <!--  bootstrap -->
-    <link rel="stylesheet" href="Styles\customcss\style.css">
+    <link rel="stylesheet" href="styles\customcss\style.css">
     <!--  custom css -->
-    <link rel="stylesheet" href="Styles\customcss\stylebox.css">
+    <link rel="stylesheet" href="styles\customcss\stylebox.css">
     <!--  custom css -->
 
     <style>
