--- a/history.html
+++ b/history.html
@@ -38,7 +38,6 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
                         <li id="trainlist"><a class="dropdown-item">Train List</a></li>
-                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
                         <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
                         <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
@@ -55,25 +54,45 @@
 
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
-        <div class="centered">History of Ceylon Train</div>
+        <div class="centered">History of <br>Ceylon Train</div>
     </div>
 
     <div class="stylebox" id="h-10"></div>
+    <div class="container p-5" id="container-body">
 
-    <div class="container" id="container-body">
-        <div>
-            <br>
-            <p> <b>
-              Ceylon Train is first stablished in 1864 with the main purpose of transportation of coffee and other 
-              agricultural plantations. The first railway line build from kandy to colombo port. After that main line 
-              extended to anuradhapura, Kankesanturai and Batticaloa. similer branch line laid to nanu oya to collect 
-              tea harvest around nuwara eliya. </p>
-        <p>Now the ceylon railway network is about 1500 KM long and these railway tracks pases most beautifull and scenic
-          routes including
-          waterfalls, mountains, tea states, forests and bridges. </b></p>
+        <div class="row maindescription">
+
+            <div class="col">
+
+
+                <b>
+    Ceylon Train is first stablished in 1864 with the main purpose of transportation of coffee and other 
+    agricultural plantations. The first railway line build from kandy to colombo port. After that main line 
+    extended to anuradhapura, Kankesanturai and Batticaloa. similer branch line laid to nanu oya to collect 
+    tea harvest around nuwara eliya. 
+
+    Now the ceylon railway network is about 1500 KM long and these railway tracks pases most beautifull and scenic
+routes including
+waterfalls, mountains, tea states, forests and bridges.<br> </b>
+                <div class="stylebox" id="h-10"></div>
+
+                <ul>
+                    <li>Customer service: 0112 421 281</li>
+                    <li>Headquarters: Colombo</li>
+                    <li>Founded: 1858</li>
+                    <li>Jurisdiction: Sri Lanka</li>
+                    <li>Electrification: 78 kilometres (48 mi) (Planned)</li>
+                    <li>Length: 1,508 km (937 mi) (track length)</li>
+                    <li>Track gauge: 1,676 mm (5 ft 6 in)</li>
+                </ul>
+            </div>
         </div>
+    </div>
 
-        <br>
+    <br>
+
+    <div class="container">
+
         <h2 style="text-align:center;font-family:Garamond;font-size:50px">Some of the scenic routes you can take</h2>
         <div class="row">
             <div class="col">
