--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
                         <li id="trainlist"><a class="dropdown-item">Train List</a></li>
-                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
                         <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
                         <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
@@ -115,7 +114,7 @@
     <div class="stylebox" id="h-10">
 
     </div>
-    <div class="container backgroundimg" id="container-body">
+    <!-- <div class="container backgroundimg" id="container-body">
 
         <div class="row">
             <div class="col-4 mainname">
@@ -131,13 +130,43 @@
                     <br>
                     <div class="contentend">
 
-                        <button type="button" class="btn btn-primary ">Read More..</button>
+                        <a href="history.html" <button type="button" class="btn btn-primary">Read More..</button></a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
+    <div class="indexbody">
+        <div class="row">
+            <div class="col">
+                <center>
+                    <h3>
+                        Our Services
+                    </h3>
+                </center>
+            </div>
+        </div>
+        <div class="row m-4">
+            <div class="col"></div>
+            <div class="col">
+                <div class="customcard db">
+                    Test Card
+                </div>
+                <h4>
+                    <ul>
+                        <li>On time Train Schedule</li>
+                        <li>24 X 7 Customer Service</li>
+                        <li>Washroom</li>
+                        <li>Canteen</li>
+                        <li>USB for Mobile charging</li>
+                        <li>Fans for every Train boxes</li>
+                    </ul>
+                    </h3>
+            </div>
+        </div>
+    </div>
+    </div>
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="script/customStript/slidshow.js"></script>
 
