--- a/trainlist.html
+++ b/trainlist.html
@@ -36,7 +36,6 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                         <li id="trainmap"><a class="dropdown-item">Train Map</a></li>
                         <li id="trainlist"><a class="dropdown-item">Train List</a></li>
-                        <li id="trainsearch"><a class="dropdown-item">Train Search</a></li>
                         <li id="pricecal"><a class="dropdown-item">Price Calculator</a></li>
                         <li id="seatbooking"><a class="dropdown-item">Train Seat Booking</a></li>
                     </ul>
@@ -53,7 +52,7 @@
 
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
-        <div class="centered">Page Name</div>
+        <div class="centered">Train List</div>
     </div>
 
     <div class="stylebox" id="h-10">
