--- a/contactus.html
+++ b/contactus.html
@@ -53,7 +53,7 @@
 
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
-        <div class="centered">Seat Booking</div>
+        <div class="centered">Contact Us</div>
     </div>
 
     <div class="stylebox" id="h-10">
@@ -63,95 +63,9 @@
     <!-- <div class="container" id="container-form"> -->
     <div class="form-container" id="bookingform">
 
-        <h2>Seat Booking Form</h2>
-
-
-        <!-- <div class="alert alert-warning alert-dismissible fade show w-100" id="savedataalert" role="alert">
-            <div class="alerttext">
-                Save Data Found<strong id="restorbtn"><a> Click Here</a>  </strong>
-            </div>
-            <button type="button" class="btn-close p-2" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div> -->
-
-        <div class="alertbox" id="savedataalert">
-            <div class="row vertivalcenter">
-                <div class="col-10 ">
-                    Save Data Found<strong id="restorbtn"><a> Click Here</a>  </strong> to Restore
-                </div>
-                <div class="col-2 ">
-                    <!-- <button type="button" class="alartbutton">ddd</button> -->
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" id="alertboxclose" aria-label="Close"></button>
-
-                </div>
-            </div>
-        </div>
-
-
+        <h2>Contact Us Form</h2>
 
         <form name="myform" action="">
-            <div class="row mt-1">
-                <div class="col-3">
-                    <h4>
-                        From :
-                    </h4>
-                </div>
-                <div class="col-3">
-                    <h4 id="spoint">
-                        xxxxxxxxxxxx
-                    </h4>
-                </div>
-            </div>
-            <div class="row mb-3">
-                <div class="col-3">
-                    <h4>
-                        To :
-                    </h4>
-                </div>
-                <div class="col-3">
-                    <h4 id="fpoint">
-                        xxxxxxxxxxxx
-                    </h4>
-                </div>
-            </div>
-
-            <h5 class="text-m">
-
-                <div class="row">
-                    <div class="col">
-                        # of Class 1 Tickets :-
-                    </div>
-                    <div class="col-3" id="class1">
-                        00
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        # of Class 2 Tickets :-
-                    </div>
-                    <div class="col-3" id="class2">
-                        00
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        # of Class 3 Tickets :-
-                    </div>
-                    <div class="col-3" id="class3">
-                        00
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col">
-                        Total Cost :-
-                    </div>
-                    <div class="col-3" id="total">
-                        00
-                    </div>
-                </div>
-            </h5>
-
-
             <div class="mt-3">
                 <label class="form-label">Email address</label>
                 <input type="email" class="form-control" id="email" placeholder="name@example.com" required>
@@ -160,26 +74,25 @@
             <div class="mt-3">
                 <label class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" placeholder="Name" required>
+                <div id="nameerr" class="form-text text-danger">Invalide Email Addrss</div>
             </div>
-            <div class="mt-3">
-                <label class="form-label">Date</label>
-                <input type="date" class="form-control" id="date" placeholder="name@example.com" required>
-            </div>
+
             <div class="mt-3">
                 <label class="form-label">Tel Number</label>
                 <input type="phone" class="form-control" id="phone" placeholder="07XXXXXXXX" required>
                 <div id="phoneerr" class="form-text text-danger">Invalide Mobile Number</div>
+            </div>
+            <div class="mt-3">
+                <label class="form-label">More Details</label>
+                <textarea r class="form-control" id="textarea" required></textarea>
+                <div id="texterr" class="form-text text-danger">More Details</div>
             </div>
 
             <div class="row">
 
                 <div class="col text-center bookingbtndiv">
                     <br>
-                    <button type="button" id="saveforlate" class="btn btn-primary">Save For Late</button>
-                </div>
-                <div class="col text-center bookingbtndiv">
-                    <br>
-                    <button type="button" id="bookingbtn" class="btn btn-success">Booking</button>
+                    <button type="button" id="submit" class="btn btn-success">submit</button>
                 </div>
             </div>
         </form>
@@ -220,7 +133,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="script/customStript/booking.js"></script>
+    <script src="script/customStript/contactus.js"></script>
+
 
 </body>
 
