--- a/index.html
+++ b/index.html
@@ -147,24 +147,46 @@
                 </center>
             </div>
         </div>
-        <div class="row m-4">
-            <div class="col"></div>
-            <div class="col">
-                <div class="customcard db">
-                    Test Card
+        <center>
+            <div class="row m-4">
+                <!-- <div class="col"></div> -->
+                <div class="col">
+                    <div class="customcard">
+                        On time Train Schedule
+                    </div>
                 </div>
-                <h4>
-                    <ul>
-                        <li>On time Train Schedule</li>
-                        <li>24 X 7 Customer Service</li>
-                        <li>Washroom</li>
-                        <li>Canteen</li>
-                        <li>USB for Mobile charging</li>
-                        <li>Fans for every Train boxes</li>
-                    </ul>
-                    </h3>
+                <div class="col">
+                    <div class="customcard">
+                        24 X 7 Customer Service
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="customcard">
+                        Online Tickets Bookingෂ්
+                    </div>
+                </div>
+
             </div>
-        </div>
+            <div class="row m-4">
+                <!-- <div class="col"></div> -->
+                <div class="col">
+                    <div class="customcard">
+                        Canteen
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="customcard">
+                        USB for Mobile charging
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="customcard">
+                        Washroom
+                    </div>
+                </div>
+            </div>
+        </center>
+
     </div>
     </div>
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
