--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="stylebox" id="h-10">
 
     </div>
-    <!-- <div class="container backgroundimg" id="container-body">
+    <div class="container backgroundimg" id="container-body">
 
         <div class="row">
             <div class="col-4 mainname">
@@ -135,7 +135,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="indexbody">
         <div class="row">
@@ -161,8 +161,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="customcard">
-                        Online Tickets Bookingෂ්
+                    <div class="customcard customcardshow" id="customcardshow">
+                        Online Tickets Booking
                     </div>
                 </div>
 
@@ -188,9 +188,29 @@
         </center>
 
     </div>
+
+    <div class="bg-dark customfooter p-2">
+
+
+
+        <div class="navbar-brand  w-100 ">
+            <center>
+                <h6>
+
+                    Copyright © 2022 Group 05 5<sup>TH</sup> Batch BICT FOT UOR.
+                    <br>All Rights Reserved
+                </h6>
+            </center>
+        </div>
+
     </div>
+
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="script/customStript/slidshow.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+
+    <script src="script/customStript/index.js"></script>
 
 
 
