--- a/history.html
+++ b/history.html
@@ -54,7 +54,7 @@
 
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
-        <div class="centered">History of <br>Ceylon Train</div>
+        <div class="centered">About</div>
     </div>
 
     <div class="stylebox" id="h-10"></div>
