--- a/contactus.html
+++ b/contactus.html
@@ -130,6 +130,21 @@
 
     </div>
     <div id="h-10"></div>
+    <div class="bg-dark customfooter p-2">
+
+
+
+        <div class="navbar-brand  w-100 ">
+            <center>
+                <h6>
+
+                    Copyright © 2022 Group 05 5<sup>TH</sup> Batch BICT FOT UOR.
+                    <br>All Rights Reserved
+                </h6>
+            </center>
+        </div>
+
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
