--- a/index.html
+++ b/index.html
@@ -66,29 +66,29 @@
             <div class="mySlides fade">
                 <div class="numbertext">2 / 7</div>
                 <img src="assets/image/slider/2.jpg" style="width:100%">
-                <div class="text">Badulla Railway station</div>
+                <div class="text">Kandy Railway station</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 7</div>
                 <img src="assets/image/slider/3.jpg" style="width:100%">
-                <div class="text">Bandarawela Railway station</div>
+                <div class="text">From the Beginning</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">4 / 7</div>
                 <img src="assets/image/slider/4.jpg" style="width:100%">
-                <div class="text">Domedera Bridgee</div>
+                <div class="text">Pattipola Railway station</div>
 
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">5 / 7</div>
                 <img src="assets/image/slider/5.jpg" style="width:100%">
-                <div class="text">Hatton Railway</div>
+                <div class="text">Arch</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">6 / 7</div>
                 <img src="assets/image/slider/6.jpg" style="width:100%">
-                <div class="text">Nine Arch Bridge</div>
+                <div class="text">With mist</div>
             </div>
             <div class="mySlides fade">
                 <div class="numbertext">7 / 7</div>
