--- a/register.html
+++ b/register.html
@@ -78,10 +78,22 @@
 
         </form>
     </div>
-    <br>
-    <br>
-    <br>
+    <div id="h-10"></div>
+    <div class="bg-dark customfooter p-2">
 
+
+
+        <div class="navbar-brand  w-100 ">
+            <center>
+                <h6>
+
+                    Copyright © 2022 Group 05 5<sup>TH</sup> Batch BICT FOT UOR.
+                    <br>All Rights Reserved
+                </h6>
+            </center>
+        </div>
+
+    </div>
 
 
 
