--- a/trainmap.html
+++ b/trainmap.html
@@ -76,6 +76,23 @@
 
 
     <br>
+    <div id="h-10"></div>
+
+    <div class="bg-dark customfooter p-2">
+
+
+
+        <div class="navbar-brand  w-100 ">
+            <center>
+                <h6>
+
+                    Copyright © 2022 Group 05 5<sup>TH</sup> Batch BICT FOT UOR.
+                    <br>All Rights Reserved
+                </h6>
+            </center>
+        </div>
+
+    </div>
 
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
 
