--- a/gallery.html
+++ b/gallery.html
@@ -50,6 +50,7 @@
         </header>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/jquery-3.6.0.min.js"></script>
     <script src="script/customStript/navbar.js"></script>
     <div class="header-img" id="navbar">
         <img src="assets/image/train.jpg" class="img-fluid">
