--- a/booking.html
+++ b/booking.html
@@ -49,6 +49,8 @@
         </header>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="application/javascript" src="script/jquery.cookie.min.js"></script>
+
     <script src="script/customStript/navbar.js"></script>
 
     <div class="header-img" id="navbar">
@@ -233,6 +235,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="script/jquery-3.6.0.min.js"></script>
+    <script type="application/javascript" src="script/jquery.cookie.min.js"></script>
     <script src="script/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="script/customStript/booking.js"></script>
 
