--- a/history.html
+++ b/history.html
@@ -50,6 +50,8 @@
         </header>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="script/jquery-3.6.0.min.js"></script>
+
     <script src="script/customStript/navbar.js"></script>
 
     <div class="header-img" id="navbar">
